--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3358,7 +3358,32 @@
    },
    "outputs": [],
    "source": [
-    "%sql -module query_group\n"
+    "%sql --module query_group\n",
+    "SELECT\n",
+    "  a.Date as Date,\n",
+    "  b.Group as Group,\n",
+    "  b.SubGroup as SubGroup,\n",
+    "  SUM(a.Impressions) as Impressions,\n",
+    "  SUM(a.Clicks) as Clicks,\n",
+    "  SUM(IF(a.AccountCurrencyCode = 'GBP', a.Cost*1.37, a.Cost*1.0))/1000000 as CostEUR,\n",
+    "  SUM(a.AllConversions) as AllConversions,\n",
+    "FROM\n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS] as a\n",
+    "JOIN\n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_GROUPS] as b\n",
+    "ON\n",
+    "  a.AccountDescriptiveName = b.a.AccountDescriptiveName AND \n",
+    "  a.CampaignName = b.CampaignName AND\n",
+    "  a.AdGroupName = b.AdGroupName AND\n",
+    "  a.Criteria = b.Criteria AND\n",
+    "  a.KeywordMatchType = b.KeywordMatchType\n",
+    "WHERE TRUE\n",
+    "AND NOT a.IsNegative\n",
+    "AND a.AdNetworkType2 = 'Google search'\n",
+    "AND a.Impressions > 0 \n",
+    "AND Year = 2015\n",
+    "AND a.AccountDescriptiveName IN ('Account Primario Volagratis','Volagratis Tratte Italia','Volagratis')\n",
+    "GROUP BY 1,2,3"
    ]
   }
  ],
