--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3291,7 +3291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -3307,11 +3307,11 @@
     "  SUM(IF(a.AccountCurrencyCode = 'GBP', a.Cost*1.37, a.Cost*1.0))/1000000 as CostEUR,\n",
     "  SUM(a.AllConversions) as AllConversions,\n",
     "FROM\n",
-    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS] as a\n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]  a\n",
     "JOIN\n",
-    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_GROUPS] as b\n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_GROUPS]  b\n",
     "ON\n",
-    "  a.AccountDescriptiveName = b.a.AccountDescriptiveName AND \n",
+    "  a.AccountDescriptiveName = b.AccountDescriptiveName AND \n",
     "  a.CampaignName = b.CampaignName AND\n",
     "  a.AdGroupName = b.AdGroupName AND\n",
     "  a.Criteria = b.Criteria AND\n",
@@ -3323,6 +3323,97 @@
     "AND Month IN ('2015-08-01','2015-09-01','2015-10-01','2015-11-01')\n",
     "AND a.AccountDescriptiveName IN ('Account Primario Volagratis','Volagratis Tratte Italia','Volagratis')\n",
     "GROUP BY 1,2,3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "timeseries = bq.Query(query_group).to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>AllConversions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-11-04</td>\n",
+       "      <td>Click</td>\n",
+       "      <td>Click - 01</td>\n",
+       "      <td>53132</td>\n",
+       "      <td>6754</td>\n",
+       "      <td>2976.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-09-20</td>\n",
+       "      <td>Converter</td>\n",
+       "      <td>Converter - Occasional</td>\n",
+       "      <td>47468</td>\n",
+       "      <td>6436</td>\n",
+       "      <td>2234.28</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-08-12</td>\n",
+       "      <td>Converter</td>\n",
+       "      <td>Converter - Low</td>\n",
+       "      <td>32001</td>\n",
+       "      <td>4214</td>\n",
+       "      <td>1600.38</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date      Group                SubGroup  Impressions  Clicks  \\\n",
+       "0  2015-11-04      Click              Click - 01        53132    6754   \n",
+       "1  2015-09-20  Converter  Converter - Occasional        47468    6436   \n",
+       "2  2015-08-12  Converter         Converter - Low        32001    4214   \n",
+       "\n",
+       "   CostEUR  AllConversions  \n",
+       "0  2976.00             0.0  \n",
+       "1  2234.28            63.0  \n",
+       "2  1600.38            54.0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeseries['Date'].to_timesta"
    ]
   },
   {
