--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3338,7 +3338,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "timeseries['Date'] = pd.to_datetime(timeseries['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "timeseries.set_index('Date',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -3351,7 +3373,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>Group</th>\n",
        "      <th>SubGroup</th>\n",
        "      <th>Impressions</th>\n",
@@ -3359,11 +3380,19 @@
        "      <th>CostEUR</th>\n",
        "      <th>AllConversions</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015-11-04</td>\n",
+       "      <th>2015-11-04</th>\n",
        "      <td>Click</td>\n",
        "      <td>Click - 01</td>\n",
        "      <td>53132</td>\n",
@@ -3372,8 +3401,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015-09-20</td>\n",
+       "      <th>2015-09-20</th>\n",
        "      <td>Converter</td>\n",
        "      <td>Converter - Occasional</td>\n",
        "      <td>47468</td>\n",
@@ -3382,8 +3410,7 @@
        "      <td>63.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-08-12</td>\n",
+       "      <th>2015-08-12</th>\n",
        "      <td>Converter</td>\n",
        "      <td>Converter - Low</td>\n",
        "      <td>32001</td>\n",
@@ -3396,24 +3423,26 @@
        "</div>"
       ],
       "text/plain": [
-       "         Date      Group                SubGroup  Impressions  Clicks  \\\n",
-       "0  2015-11-04      Click              Click - 01        53132    6754   \n",
-       "1  2015-09-20  Converter  Converter - Occasional        47468    6436   \n",
-       "2  2015-08-12  Converter         Converter - Low        32001    4214   \n",
+       "                Group                SubGroup  Impressions  Clicks  CostEUR  \\\n",
+       "Date                                                                          \n",
+       "2015-11-04      Click              Click - 01        53132    6754  2976.00   \n",
+       "2015-09-20  Converter  Converter - Occasional        47468    6436  2234.28   \n",
+       "2015-08-12  Converter         Converter - Low        32001    4214  1600.38   \n",
        "\n",
-       "   CostEUR  AllConversions  \n",
-       "0  2976.00             0.0  \n",
-       "1  2234.28            63.0  \n",
-       "2  1600.38            54.0  "
+       "            AllConversions  \n",
+       "Date                        \n",
+       "2015-11-04             0.0  \n",
+       "2015-09-20            63.0  \n",
+       "2015-08-12            54.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timeseries['Date'].to_timesta"
+    "timeseries[:3]"
    ]
   },
   {
