--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3382,34 +3382,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group</th>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>AllConversions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-08-01</th>\n",
+       "      <td>Click</td>\n",
+       "      <td>Click - 02</td>\n",
+       "      <td>4698</td>\n",
+       "      <td>703</td>\n",
+       "      <td>130.92</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-08-01</th>\n",
+       "      <td>Impressions</td>\n",
+       "      <td>Impressions - 01</td>\n",
+       "      <td>1747</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-08-01</th>\n",
+       "      <td>Converter</td>\n",
+       "      <td>Converter - High</td>\n",
+       "      <td>50684</td>\n",
+       "      <td>15413</td>\n",
+       "      <td>2208.11</td>\n",
+       "      <td>416.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-08-01</th>\n",
+       "      <td>Converter</td>\n",
+       "      <td>Converter - Low</td>\n",
+       "      <td>24594</td>\n",
+       "      <td>3395</td>\n",
+       "      <td>1180.40</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6e446b1310>"
+       "                  Group          SubGroup  Impressions  Clicks  CostEUR  \\\n",
+       "Date                                                                      \n",
+       "2015-08-01        Click        Click - 02         4698     703   130.92   \n",
+       "2015-08-01  Impressions  Impressions - 01         1747       0     0.00   \n",
+       "2015-08-01    Converter  Converter - High        50684   15413  2208.11   \n",
+       "2015-08-01    Converter   Converter - Low        24594    3395  1180.40   \n",
+       "\n",
+       "            AllConversions  \n",
+       "Date                        \n",
+       "2015-08-01             0.0  \n",
+       "2015-08-01             0.0  \n",
+       "2015-08-01           416.0  \n",
+       "2015-08-01            51.0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfMAAAFmCAYAAAB5pHO7AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XtcVXW+//H3Zm9BRBCQi452PB4Zkykxy/JSkYMGIYOC\nRXZMxUtZM5MWmR4vk5cK6+Tk2Ix1xpwuk1bzGy/gWHgDx9TJbDKTxnRKy9SULYoXRAWB9fsD2Yqw\nBRXFr/v1fDx6yF43vuvzWDPv73etzfraLMuyBAAAjOXV0A0AAACXhzAHAMBwhDkAAIYjzAEAMBxh\nDgCA4QhzAAAMV2uY5+XlaciQIUpISFBiYqLmzZsnSZo9e7aio6OVnJys5ORkrV271rXPnDlzFBsb\nq/j4eK1fv961fOvWrUpMTFRcXJzS09Ndy0tKSpSWlqbY2FgNGDBA+/btq89zBADguuaobQO73a4J\nEyYoMjJSRUVF6t+/v3r06CFJGjZsmIYNG1Zl+507d2rZsmXKyspSXl6ehg0bppUrV8pms2nq1KlK\nT09XVFSUHn30Ua1bt0533323Fi5cqGbNmmnlypXKysrSjBkz9Lvf/e7KnDEAANeZWkfmoaGhioyM\nlCT5+fmpXbt2OnDggCSppvfN5OTkqE+fPnI4HGrdurXatGmj3Nxc5efnq6ioSFFRUZKkpKQkZWdn\nu/ZJTk6WJMXFxWnDhg31c3YAAHiAi3pmvnfvXm3fvt0VyPPnz1e/fv00adIkFRYWSpKcTqdatmzp\n2ic8PFxOp1NOp1MtWrSotlySDhw44Fpnt9sVEBCgI0eOXN6ZAQDgIeoc5kVFRRo9erQmTpwoPz8/\nDRw4UDk5OVqyZIlCQkL00ksv1VujeMMsAAB1V6cwLy0t1ejRo9WvXz/17t1bkhQcHCybzSZJevDB\nB5WbmyupYsS9f/9+1755eXkKDw+vttzpdCo8PFySFBYWpry8PElSWVmZjh8/rsDAwFraVFbXcwQA\n4LpW6xfgJGnixImKiIhQamqqa1l+fr5CQ0MlSatWrVL79u0lSTExMXrmmWc0dOhQOZ1O7d69W1FR\nUbLZbPL391dubq46duyozMxMDR482LVPRkaGOnXqpOXLl6tbt261tunw4RMXfbKXIzTUX/n5hVf1\nd5qC2rhHbdyjNu5RG/c8uTahof5u19Ua5ps2bdLSpUvVvn17JSUlyWazKS0tTR9++KG2bdsmLy8v\ntWrVSs8995wkKSIiQvHx8UpISJDD4dCUKVNcI/jJkydrwoQJKi4uVnR0tKKjoyVJKSkpGjt2rGJj\nYxUYGKiZM2fWx3kDAOARbKZOgXq1e2ae3BusDbVxj9q4R23cozbueXJtLjQy5w1wAAAYjjAHAMBw\nhDkAAIYjzAEAMBxhDgCA4QhzAMAVV1BwSFOmTNRDDyXrkUeGaNy4p7Rnz24NGTJAkrR9+za9+uor\nFzzGvfdGX42mGqlOL40BAOByTJw4Vn36JGratOmSpJ07d6igoMD1HpIOHSLVoUPkBY9RuS2qY2QO\nALiivvjiczkcDvXtm+xa1q5dhOuV3pK0efMmjRuXJkk6efKkpk+fptTUhzR06EB9/PHfJZ2dt+PI\nkSN6/PHh2rDhHzp06KCeeGKkhg9/WKmpDyk398ureGbXDkbmAOBB/rp6h/65/UC9HvP2DmF6MCbC\n7frvvtuhG2+88KhbkioH3u+88yf5+/vrz3/+iyTp+PHjZ9bbdOjQIY0b95Qee+zXuu222/WXv8xX\n167dNXjwMFmWpVOnTl3+CRmIkTkA4Jry+eefqX//B12fmzZtKkkqLT2toUOH6te/flK33Xa7JCky\n8iZ99NFSvf32XO3Y8a18fX0bpM0NjZE5AHiQB2MiLjiKvhLatm2nNWtWX/Zx7Ha7br75Zn366Sfq\n1KmzJKlTp8567bU3tGHDek2fPlUPPTRIcXF9Lvt3mYaROQDgirrtttt1+vRpLV2a6Vq2c+cOOZ3O\nGre//fauWrz4r67PhYWV72K3afr06dq9e5fee+/Pkiqm2Q4KCtYvfpGkX/wiSd98s/2Knce1jJE5\nAOCKmz59hl599RXNn/+OfHx81KLFTzR69NM1bpuaOkIzZ/6vhgwZILvdrmHDRio6uqdsNptsNpum\nTp2u8ePHyM/PTz4+jfXBB/PkcDjUpImffvObaVf5zK4NzJpWR548U09tqI171MY9auMetXHPk2vD\nrGkAAFzHCHMAAAxHmAMAYDjCHAAAwxHmAAAYjjAHAMBw/J05AOCKKyg4pFdffUX//vc2NW3qr+Dg\nYI0ePUatW99Q52PMm/e2nn56tOtzdPQdioj4qSzLks1mU69esXr44VSlpPTVm2/OU0BAM0kVk7h8\n8MF8vfzy77Rs2Yd67bVXFRYWppKS0+rfP0X9+6fU+/lebYQ5AOCKq3kK1EMXFebvvls1zBs39tVb\nb71Xw5bVp0o9d/bU3r1j9dRTY3Xs2FE9/HCKfv7z3goKCqpzO65FhDkA4IpyNwWqJL322qvauPET\n2WxeGjJkuHr1uleHDh3UlCkTdeJEkcrKyjRmzHh98sl6lZQUKzk5WTfc0EbPPvu83L/zrG7vQgsI\naKaf/KSV8vL2EeYAAHMs3vGhNh/4ql6P2Tmso/pH/MLtendToH788Wrt3Pmt3n33/+nw4QI98sgQ\nde58q1atWl5tWtOoqFu0ePECZWRkuN4AV1JSrOHDH3bdZh80aJhiYnrXud15eXnav3+fWrVqffEn\nfY0hzAEADSI390v17h0nSQoKClbnzrdp27avFRl5k1588TmVlpbqrrvu0U9/2r7G/X18Gl/Ebfaz\ny7KzV2rz5i+0Z88P+tWvRruerZuMMAcAD9I/4hcXHEVfCXWdArXytnnFtKZzq01rWtepRAIDm6mw\nsNAV0seOHVOzZoGu9ZXPzLdv36bJk8crIaGf8fOg86dpAIAryt0UqE2b+isnZ5XKy8t1+PBh5eZ+\nqZ/97Ca305o2atRIpaWlrmO4C/fOnW/T8uUfSZLKysq0cmWWbr21S7XtOnSI1F13RWvBgg/q83Qb\nBCNzAMAVV9MUqE8+OUYnT57U0KH/LZvNS7/61WgFBQVr2bIPa5zWtG/fZPXt21cREe317LPPV3tm\n3rVrDz322K+VmjpCv/3tSxo6dKAkqWvX7oqL61NjuwYOTNXIkal68MGBaty48VWrR31jCtQ68uRp\n92pDbdyjNu5RG/eojXueXBumQAUA4DpGmAMAYDjCHAAAwxHmAAAYjjAHAMBwhDkAAIYjzAEAV8Xa\ntWt09923a/fuHyRJeXn7NWTIAEkV05SOG5fm2nbDhn/okUeGaPDgBzV8+CC99tqrDdJmd/73f9P1\nww+7GroZLrw0BgBwVeTkrFCPHncpO3uFhg8fKanqO9Mrf/zuux2aNWuGfvvb3+uGG/5DlmVpyZLF\nV729ZWVlstvtNa77n/+ZdJVbc2GEOQDgijt58qS+/nqrZs9+Q08//YQrzGvy/vvzlJo6Qjfc8B+S\nKgI/Kel+SdKPP/6osWP/R0ePHlVgYKAmTpyisLBwTZ8+TU2a+Onf//5aBQUF+tWvRuuee2I0ZcpE\n3Xdfgrp3v1OSNH36NN155926++6e+uMf/6DNm7/Q6dOn1b9/ivr2TdbmzZv0pz/9Uf7+/tq9+we9\n9dZ7mjx5vPLzD6i8vFypqY8oJqa3Ro16TE88kaYbb+ygVauWa/78dyRJ3brdqV/+cpQk6d57o5WS\n8pA++WS9GjdurBdffEVBQUFavTpb77wzV3a7XX5+TTV79huXXV/CHAA8SP6Cv6jw83/W6zH9u9yu\n0JSHLrjNunUf6447uik8vIWCgoL1zTfb3c5W9t13O/Xf/z24xnXPP/+8+vRJVFxcH3300d/0u9/N\n0Isv/laSVFBwSP/3f29p167vNX7807rnnhj16hWr1atXqXv3O1VaWqpNm/6pZ56ZoA8/XKKmTf01\nd+6fdfr0af3ylyN0xx3dJEnffPNvzZv3V7Vo0UIff7xaISGhevnlWZKkEyeKqrTn4MGD+uMfZ+vt\nt99T06b+Skv7tdav/1h33XWPTp06qY4dozRy5K/0+uu/19KlGRoyZLj+/Oc/aebM1xQSEqKiouMX\nVWt3eGYOALjisrNXKCbmXknSz3/eS6tWrbik43z55dlpU+Pi+uirr7a41t199z2SpP/8z7Y6fLhA\nktStWw9t3rxJpaWl+vTTf+iWWzrL29tbn332qZYv/0jDhg3UyJGpOnbsqPbs2S1J+tnPblKLFi0k\nSf/1XxH65z8/0x//OFtbtnypJk38qrRn+/atuvXWLgoIaCYvLy/de+99+vLLzZIqJobp3v0uSdKN\nN0Zq//79kqSOHW9RevoULV2aqbKyskuqw/kYmQOABwlNeajWUXR9O3bsmL744p/6/vudkmwqLy+T\nzWZT//4pNW7ftu1/afv2r9WuXUS1dec+Yz+ft7e36+fKWUe8vb3VufNt+vTTT5STs8rVEZAspaWN\n1e23d6tyjM2bN1WZcOWGG/5Db701Xxs2/ENz576uLl3u0NChj1TZx90UJ3a745yfvVRWVjHj2zPP\njNe2bVv1ySfrNWLEYL355nwFBAS4Pa+6YGQOALii/v73bN13X4IWLPibFixYokWLPlTLlj/RgQPO\nGoNw4MAhmjfvHddIuby8XJmZiyRJnTt3VnZ2xah+5cpl6tTplhp/57nHjYnprayspcrN/VJdu3aX\nJN1xR3ctXrzQNaXqnj27derUqWrHOXjwoHx8fBQbe58GDhyib775d5X1kZE3acuWzTp27KjKysqU\nnb1CnTvfdsF6/PjjXkVG3qQRIx5TYGCQDhxwXnD7umBkDgC4olavXqWHH06tsqxnzxjNm/e2bLbq\nY8p27SL05JNPa+rUSSouLpbNJvXocbck6Te/+Y2eeWacPvhgvusLcDU5dwR/++3d9MILU3T33T3l\ncFTEXmJikvbv36cRIwbJsiwFBQW7nr2f67vvdui1116Vl5dNDkcjjR07ocrxmzcP0eOPP6FRox6T\nJHXvfpfuvPPuam041+uvv6q9e/dIkrp0uUMRET91U7m6YwrUOvLkafdqQ23cozbuURv3qI17nlwb\npkAFAOA6RpgDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4AgOEIcwAADFdrmOfl5WnI\nkCFKSEhQYmKi3n33XUnS0aNHNXz4cMXFxWnEiBEqLDz7Rp45c+YoNjZW8fHxWr9+vWv51q1blZiY\nqLi4OKWnp7uWl5SUKC0tTbGxsRowYID27dtXn+cIAMB1rdYwt9vtmjBhgj766CP95S9/0Xvvvaed\nO3fqjTfeUPfu3bVixQp17dpVc+bMkSTt2LFDy5YtU1ZWlubOnatp06a5Xng/depUpaena8WKFdq1\na5fWrVsnSVq4cKGaNWumlStXKjU1VTNmzLiCpwwAwPWl1jAPDQ1VZGSkJMnPz0/t2rWT0+lUTk6O\nkpOTJUnJycnKzs6WJK1evVp9+vSRw+FQ69at1aZNG+Xm5io/P19FRUWKioqSJCUlJbn2OfdYcXFx\n2rBhQ/2fKQAA16mLema+d+9ebd++XZ06ddKhQ4cUEhIiqSLwCwoqJoJ3Op1q2bKla5/w8HA5nU45\nnU7XZO/nLpekAwcOuNbZ7XYFBAToyJEjl3dmAAB4iDpPgVpUVKTRo0dr4sSJ8vPzqza124UmjL9Y\ndZnILSioiRwOe739zrq40Iw1no7auEdt3KM27lEb96hNdXUK89LSUo0ePVr9+vVT7969JUnNmzfX\nwYMHFRISovz8fAUHB0uqGHHv37/ftW9eXp7Cw8OrLXc6nQoPD5ckhYWFubYrKyvT8ePHFRgYeME2\nHT584uLO9DJ58rR7taE27lEb96iNe9TGPU+uzWVPgTpx4kRFREQoNfXs5PIxMTFavHixJCkjI0O9\nevVyLc/KylJJSYn27Nmj3bt3KyoqSqGhofL391dubq4sy1JmZmaVfTIyMiRJy5cvV7du3S7tTAEA\n8EC1jsw3bdqkpUuXqn379kpKSpLNZlNaWpoeffRRPfXUU1q0aJFatWqlWbNmSZIiIiIUHx+vhIQE\nORwOTZkyxXULfvLkyZowYYKKi4sVHR2t6OhoSVJKSorGjh2r2NhYBQYGaubMmVfwlAEAuL7YrLo8\noL4GXe3bLJ58a6c21MY9auMetXGP2rjnybW57NvsAADg2kWYAwBgOMIcAADDEeYAABiOMAcAwHCE\nOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMAYDjCHAAAwxHmAAAYjjAHAMBwhDkAAIYjzAEAMBxhDgCA\n4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4AgOEIcwAADEeYAwBgOMIc\nAADDEeYAABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMAYDjCHAAAwxHmAAAYjjAHAMBw\nhDkAAIYjzAEAMBxhDgCA4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4A\ngOEIcwAADEeYAwBgOMIcAADDEeYAABiu1jCfOHGievToocTERNey2bNnKzo6WsnJyUpOTtbatWtd\n6+bMmaPY2FjFx8dr/fr1ruVbt25VYmKi4uLilJ6e7lpeUlKitLQ0xcbGasCAAdq3b199nRsAAB6h\n1jDv37+/3nzzzWrLhw0bpoyMDGVkZCg6OlqStHPnTi1btkxZWVmaO3eupk2bJsuyJElTp05Venq6\nVqxYoV27dmndunWSpIULF6pZs2ZauXKlUlNTNWPGjPo8PwAArnu1hnmXLl0UEBBQbXllSJ8rJydH\nffr0kcPhUOvWrdWmTRvl5uYqPz9fRUVFioqKkiQlJSUpOzvbtU9ycrIkKS4uThs2bLisEwIAwNNc\n8jPz+fPnq1+/fpo0aZIKCwslSU6nUy1btnRtEx4eLqfTKafTqRYtWlRbLkkHDhxwrbPb7QoICNCR\nI0cutVkAAHicSwrzgQMHKicnR0uWLFFISIheeumlemtQTSN+AADgnuNSdgoODnb9/OCDD+rxxx+X\nVDHi3r9/v2tdXl6ewsPDqy13Op0KDw+XJIWFhbm2Kysr0/HjxxUYGFhrG4KCmsjhsF9K8y9ZaKj/\nVf19JqE27lEb96iNe9TGPWpTXZ3C/PzRcn5+vkJDQyVJq1atUvv27SVJMTExeuaZZzR06FA5nU7t\n3r1bUVFRstls8vf3V25urjp27KjMzEwNHjzYtU9GRoY6deqk5cuXq1u3bnVq+OHDJ+p8kvUhNNRf\n+fmFV/V3moLauEdt3KM27lEb9zy5NhfqxNQa5mPGjNHGjRt15MgR9ezZU6NGjdLGjRu1bds2eXl5\nqVWrVnruueckSREREYqPj1dCQoIcDoemTJkim80mSZo8ebImTJig4uJiRUdHu74Bn5KSorFjxyo2\nNlaBgYGaOXNmfZwzAAAew2YZ+pD6avfMPLk3WBtq4x61cY/auEdt3PPk2lxoZM4b4AAAMBxhDgCA\n4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4AgOEIcwAADEeYAwBgOMIc\nAADDEeYAABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMAYDjCHAAAwxHmAAAYjjAHAMBw\nhDkAAIYjzAEAMBxhDgCA4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4A\ngOEIcwAADEeYAwBgOMIcAADDEeYAABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMAYDjC\nHAAAwxHmAAAYjjAHAMBwhDkAAIYjzAEAMBxhDgCA4QhzAAAMR5gDAGC4WsN84sSJ6tGjhxITE13L\njh49quHDhysuLk4jRoxQYWGha92cOXMUGxur+Ph4rV+/3rV869atSkxMVFxcnNLT013LS0pKlJaW\nptjYWA0YMED79u2rr3MDAMAj1Brm/fv315tvvlll2RtvvKHu3btrxYoV6tq1q+bMmSNJ2rFjh5Yt\nW6asrCzNnTtX06ZNk2VZkqSpU6cqPT1dK1as0K5du7Ru3TpJ0sKFC9WsWTOtXLlSqampmjFjRn2f\nIwAA17Vaw7xLly4KCAiosiwnJ0fJycmSpOTkZGVnZ0uSVq9erT59+sjhcKh169Zq06aNcnNzlZ+f\nr6KiIkVFRUmSkpKSXPuce6y4uDht2LCh/s4OAAAPcEnPzAsKChQSEiJJCg0NVUFBgSTJ6XSqZcuW\nru3Cw8PldDrldDrVokWLassl6cCBA651drtdAQEBOnLkyKWdDQAAHqhevgBns9nq4zCS5LotDwAA\n6sZxKTs1b95cBw8eVEhIiPLz8xUcHCypYsS9f/9+13Z5eXkKDw+vttzpdCo8PFySFBYW5tqurKxM\nx48fV2BgYK1tCApqIofDfinNv2Shof5X9feZhNq4R23cozbuURv3qE11dQrz80fLMTExWrx4sUaO\nHKmMjAz16tXLtfyZZ57R0KFD5XQ6tXv3bkVFRclms8nf31+5ubnq2LGjMjMzNXjwYNc+GRkZ6tSp\nk5YvX65u3brVqeGHD5+4mPO8bKGh/srPL6x9Qw9EbdyjNu5RG/eojXueXJsLdWJqDfMxY8Zo48aN\nOnLkiHr27KlRo0Zp5MiRevLJJ7Vo0SK1atVKs2bNkiRFREQoPj5eCQkJcjgcmjJliusW/OTJkzVh\nwgQVFxcrOjpa0dHRkqSUlBSNHTtWsbGxCgwM1MyZM+vjnAEA8Bg2y9CH1Fe7Z+bJvcHaUBv3qI17\n1MY9auOeJ9fmQiNz3gAHAIDhCHMAAAxHmAMAYDjCHAAAwxHmAAAYjjAHAMBwhDkAAIYjzAEAMBxh\nDgCA4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4AgOEIcwAADEeYAwBg\nOMIcAADDEeYAABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMAYDjCHAAAwxHmAAAYjjAH\nAMBwhDkAAIYjzAEAMBxhDgCA4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAc\nYQ4AgOEIcwAADEeYAwBgOMIcAADDEeYAABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMA\nYDjCHAAAwxHmAAAYznE5O8fExKhp06by8vKSw+HQwoULdfToUaWlpenHH39U69atNWvWLPn7+0uS\n5syZo0WLFslut2vSpEm66667JElbt27V+PHjVVJSoujoaE2aNOnyzwwAAA9xWSNzm82mefPmKTMz\nUwsXLpQkvfHGG+revbtWrFihrl27as6cOZKkHTt2aNmyZcrKytLcuXM1bdo0WZYlSZo6darS09O1\nYsUK7dq1S+vWrbvM0wIAwHNcVphblqXy8vIqy3JycpScnCxJSk5OVnZ2tiRp9erV6tOnjxwOh1q3\nbq02bdooNzdX+fn5KioqUlRUlCQpKSnJtQ8AAKjdZY/Mhw8frvvvv18LFiyQJB06dEghISGSpNDQ\nUBUUFEiSnE6nWrZs6do3PDxcTqdTTqdTLVq0qLYcAADUzWU9M//ggw8UFhamgoICDR8+XG3btpXN\nZquyzfmf60tQUBM5HPYrcmx3QkP9r+rvMwm1cY/auEdt3KM27lGb6i4rzMPCwiRJwcHB6t27t3Jz\nc9W8eXMdPHhQISEhys/PV3BwsKSKEff+/ftd++bl5Sk8PLzacqfTqfDw8Fp/9+HDJy6n6RctNNRf\n+fmFV/V3moLauEdt3KM27lEb9zy5NhfqxFzybfaTJ0+qqKhIknTixAmtX79e7du3V0xMjBYvXixJ\nysjIUK9evSRVfPM9KytLJSUl2rNnj3bv3q2oqCiFhobK399fubm5sixLmZmZrn0AAEDtLnlkfvDg\nQT3xxBOy2WwqKytTYmKi7rrrLt1888166qmntGjRIrVq1UqzZs2SJEVERCg+Pl4JCQlyOByaMmWK\n6xb85MmTNWHCBBUXFys6OlrR0dH1c3YAAHgAm1X592GGudq3WTz51k5tqI171MY9auMetXHPk2tz\nRW6zAwCAawNhDgCA4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5AACGI8wBADAcYQ4AgOEI\ncwAADEeYAwBgOMIcAADDEeYAABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDhCHMAAAxHmAMAYDjCHAAA\nwxHmAAAYjjAHAMBwhDkAAIYjzAEAMBxhDgCA4QhzAAAMR5gDAGA4whwAAMMR5gAAGI4wBwDAcIQ5\nAACGI8wBADAcYQ4AgOEIcwAADEeYAwBgOMIcAADDORq6AZfqh7xCORxeauTwUiN7xb8Ou00Ou5fs\nXjbZbLaGbiIAAFeFsWE+7Z1/1mk7h92mxt4O+frY5dPIcSb8bRUdAbuXq0PgsJ/tGDjO6Rw0ctjV\nyG5TUGATnTpZcnZdlU5E9e0dZ47tRacCAHCFGRvmdVVaZun4ydM6fvJ0QzdFkuTTyC5fH7t8fRzy\n9XHIu4aOQZWOxZnORyOHveLOwznbVq6vaXvHeR0N7lYAwPXrug/za03x6TIVny7TkeMlDd0U2b1s\naux9tmPh621XYx9HDXcozr3zcG6noeLf5sGFOlFUXPOdivPuZHC3AgDqH2HuwcrKLRWdKlXRqdKG\nbopLU99G8vNtpCY+djX2dqiJj0PejexVvxvhqH7nwd2dDdd3Kc7rhHC3AsD1hDDHNeVaeiQiST7e\ndvn7NpJ/E2/5+VZ0Lioej9jlcNhquBtRtWMRUnBSRcdPuR6TVLmzcc72Xl50KgBcOsIcuIDikjIV\nl5Tp4NFTDd0USZKXzSb/JhWdi4p/G6mpbyP5nvt4xM1jEtcXP2v8nkXlXQ3uVgAmIswBg5Rblo4W\nlehoUcN/56JSEx9HtQ6GfxNv+TVuVNFhqPY9i4o7GgUnTut44Sm3j0e4WwHUHWEO4LKcKC7VieJS\nOQ+fbOimlHpDAAAMvklEQVSmSJIaObyqdi58z/7s17iRGnvbK/6E1M13L2r64id3K3CtI8wBXFdO\nl5ar4FixCo4VN3RTXHx9HAps6q2Ayg6Gn7f8fSsekTRpXPE9jMbeFX+q2sjhpVPl0rFjJ8/7M1Sb\n7F68tBM1I8wB4Ao7WVyqk8Wl2n/oREM3xcWvsUNB/j4K8m+sZn7errsZFd/BqPgzVd8zL9yq+MJn\n5SOQijsa3K24thDmAOCBKv8sdW9+UUM3xaWpb6MzHYyz/wU08VaTxhV/SdLYx6ETZZZOFRVX3Mlo\nxJ+YVjI2zBvf8ndZ5V6S5SVZNte/NS6zbBWfVfmvzqw/s+zMZ+vcdbJJls7Z58znc/apelxVP/45\nn61zP1due347ziy3ajpm5XHPO0aN29bw+6ucKwBcgyr/NHXPgeMN3RQX/yYVHYxg/8YK8vdRoL+P\ngv19XH9F0tjb7upoNOTjEGPD3OZdTDTBxSqv7Lx5SeU2WZUdOtmkci9Xh8g6r6NX+XNlR84qbqLS\nfe2kcnvDnhCAa0LhidMqPHFau50N38FY+ko/t+uMDXPgXDYvS1LZmf8u7x5Eo598Vx9N8mhWqUNW\nmUMqaySr1CGVOWSV26Uyh1Rur1hX7lWxzPKSVdJY5ceCz3ay6KoDF+WaCfO1a9dq+vTpsixL999/\nv0aOHNnQTQJwiWyOUtkcpZKujZfteAKrzOtM56nRmY5UDR0q1/JGZztY5V5n7l6duUN13l2rs48F\n6WBdy66JMC8vL9fzzz+vd955R2FhYXrggQfUq1cvtWvXrqGbBgBGsNnLJXuxbN7Xzp/k4SyrzC7r\ntLdU6n22w1Va0fk62wlrdE6nq6KjZVn2s48KL+CaCPPc3Fy1adNGrVq1kiQlJCQoJyeHMAcAXBds\n9jLZ7CclXc7Lle53u+aaCHOn06mWLVu6PoeHh+urr7664D5Pvn/gSjcLAIBrxwD3q3idEAAAhrsm\nRubh4eHat2+f67PT6VRYWNgF97lzyaIr3SwAAIxwTYzMO3bsqN27d+vHH39USUmJPvroI/Xq1auh\nmwUAgBGuiZG53W7Xs88+q+HDh8uyLD3wwAN8+Q0AgDqyWZZlNXQjAADApbsmbrMDAIBLR5gDAGA4\nwhwAAMN5fJiXl5crKSlJjz/+uCRp9uzZio6OVnJyspKTk7V27VrXtnPmzFFsbKzi4+O1fv161/Kt\nW7cqMTFRcXFxSk9Pv+rncKWUl5crOTnZVZujR49q+PDhiouL04gRI1RYWOja1lNqU1JSopSUFCUl\nJSkhIUEzZ86UxHUjua8N142Ul5enIUOGKCEhQYmJiZo3b54krhupem3effddSVw3F83ycG+//bY1\nZswY67HHHrMsy7L+8Ic/WG+99Va17Xbs2GH169fPOn36tLVnzx6rd+/eVnl5uWVZlvXAAw9YW7Zs\nsSzLsh555BFr7dq1V+8ErqDza/Pyyy9bb7zxhmVZljVnzhxrxowZlmVZ1rfffutRtTlx4oRlWZZV\nWlpqpaSkWJ9//jnXzRk11YbrxrIOHDhgff3115ZlWdbx48et2NhYa8eOHVw3lvvacN1cHI8emefl\n5enjjz9WSkpKleVWDV/wz8nJUZ8+feRwONS6dWu1adNGubm5ys/PV1FRkaKioiRJSUlJys7Ovirt\nv5Jqqk1OTo6Sk5MlScnJya7zXL16tUfVxtfXV1LFSLS8vFzNmjWTxHUj1VwbrhspNDRUkZGRkiQ/\nPz+1a9dOBw5UvJLa06+bmmrjdDq5bi6SR4f59OnTNW7cONlsVWejmT9/vvr166dJkya5bu3U9P54\np9Mpp9OpFi1aVFtuuppqc+jQIYWEhEiq+B9gQUGBJM+rTeWjmTvvvFN33HGHIiIiJHHdSDXXhuum\nqr1792r79u2u0OG6OauyNp06deK6uUgeG+Zr1qxRSEiIIiMjq/SMBw4cqJycHC1ZskQhISF66aWX\nGrCVDcNdbc53fifIU3h5eSkzM1Nr167V559/rs8++4zr5oxza7Np0yZt3Lix2nXiqdeNJBUVFWn0\n6NGaOHGi/Pz8uG7OcX5tuG4ujseG+RdffKHVq1erV69eGjNmjDZu3Khx48YpODjYddE8+OCDys3N\nlVTRy9u/f79r/7y8PIWHh1db7nQ6FR4efnVPpp7VVJuxY8cqJCREBw8elCTl5+crODhYkmfV5lxN\nmzbVPffco3/9619cN+dp2rSpoqOj9a9//UvNmzfnupFUWlqq0aNHq1+/furdu7ckcd2cUVNtuG4u\njseG+dNPP601a9YoJydHM2fOVNeuXfXyyy8rPz/ftc2qVavUvn17SVJMTIyysrJUUlKiPXv2aPfu\n3YqKilJoaKj8/f2Vm5sry7KUmZlp/Hvla6rNjBkz9POf/1yLFy+WJGVkZLjO05NqU1BQ4LoVeurU\nKX3yySeKjIzkulHNtfnZz36mmJgYj79uJGnixImKiIhQamqqaxnXTYWaasN1c3GuiXezX0tmzJih\nbdu2ycvLS61atdJzzz0nSYqIiFB8fLwSEhLkcDg0ZcoUV4968uTJmjBhgoqLixUdHa3o6OiGPIUr\nZuTIkXrqqae0aNEitWrVSrNmzZLkWbXJz8/X+PHjZVmWysvL1a9fP3Xv3l3jxo3z+OvGXW0iIyM9\n/rrZtGmTli5dqvbt2yspKUk2m01paWn68MMPPf66cVebRx991OOvm4vBu9kBADCcx95mBwDgekGY\nAwBgOMIcAADDEeYAABiOMAcAwHCEOQAAhiPMAcPExMRox44dDd2MOklOTlZJSUlDNwO47vHSGAAu\nZWVlstvt9Xa8jIyMejsWAPcIc8AwlW+7Gjx4sG6++WZt2bJF+/fv16BBgxQaGqr3339f+fn5Gjt2\nrO677z5JUocOHfTrX/9aOTk5Ki4uVlpammJjY13rnnjiCa1Zs0bR0dEaPXq05s6dq1WrVqm0tFTh\n4eF64YUX1Lx5c2VnZ+vVV1+Vw+FQaWmpJk+erNtvv12zZ89WVlaWfHx8ZLPZ9O6776pp06bq0KGD\nNm/eLF9fX+Xm5mr69Ok6efKkfH19NWnSJHXs2FE//vij7r//fg0YMEBr167VqVOnlJ6erltvvVUF\nBQUaM2aMDh06JEnq0aOHxo8f3zCFB65lDTCHOoDLEBMTY3377bfWoEGDrLS0NMuyLMvpdFqdOnWy\nZs6caVmWZW3ZssWKjo527XPjjTdar7/+umVZlvXdd99Zd9xxh3Xo0CHXuj/96U+ubZcsWWI9++yz\nrs/vv/++NWbMGMuyLKtv377Wl19+aVmWZZWXl1vHjx+3jhw5YnXp0sUqLi62LMuyioqKrLKyMsuy\nLKtDhw7WiRMnrJKSEqtnz57Wp59+almWZX3yySdWz549rdOnT1t79+61brzxRmvNmjWWZVnW3/72\nN+uhhx6yLMuy3n77bWvy5Mmuthw7dqxeaghcb3hmDhiscuQdFhamwMBA12j75ptvltPprPK8+oEH\nHpAktW3bVjfddJO2bNniWpeUlOT6efXq1dqwYYOSkpKUlJSk999/3zUbVbdu3fTiiy/qzTff1I4d\nO+Tn5yd/f3+1adNG48aN04IFC1RUVCQvr6r/1/L999/L29tbXbt2lSR1795d3t7e+v777yVJfn5+\nuueeeyRJt9xyi/bs2eP6ed26dZoxY4bWrFkjX1/f+isecB0hzAGD+fj4uH728vJyffby8pLNZlNZ\nWZlrvXWBaRiaNGlSZbtf/vKXyszMVGZmppYuXar33ntPkjRhwgQ9//zz8vb21pNPPqkFCxbIy8tL\nf/3rXzVo0CDl5eWpf//++uabb2pt+7nt8fb2rnIele2+5ZZblJGRoZtuuklLlizRkCFDaj0u4IkI\nc8AwFwrlC21XOZ3krl27tG3bNt1yyy017hcTE6P3339fx44dkySVlJRo+/btkipG2D/96U81ePBg\n9e3bV1999ZVOnDihQ4cOqUuXLho1apTat2+vb7/9tkob2rZtq9OnT+uzzz6TJG3YsEGlpaVq27Zt\njW2t/Lx37175+fmpT58+Gj9+vL7++us6nTvgafgCHGCYyi/AVf57/nJ3n0tLS5WcnKxTp07p+eef\nV1BQUI3b9evXT0eOHNGgQYNks9lUXl6ugQMHqkOHDnrllVf0ww8/yG63KyAgQOnp6SosLNSoUaNU\nXFys8vJy3XTTTbr33nurHLtRo0b6/e9/rxdeeMH1Bbg//OEPcjgcF2z7Z599prffflt2u12WZWna\ntGmXXDfgesYUqIAH6NChg7788ks1bty4oZsC4ArgNjvgAWw2W51vzwMwDyNzAAAMx8gcAADDEeYA\nABiOMAcAwHCEOQAAhiPMAQAwHGEOAIDh/j/oT/spHjQdsQAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6e3ea47410>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "time"
+    "timeseries[:4]"
    ]
   },
   {
