--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3327,7 +3327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -3349,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -3475,7 +3475,32 @@
     }
    ],
    "source": [
-    "timeseries[:4]"
+    "timeseries.pivot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2015-09-14\n",
+       "1   2015-11-17\n",
+       "2   2015-09-09\n",
+       "Name: Date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(tmp['Date'][:3])"
    ]
   },
   {
