--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3382,7 +3382,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Group</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Impressions</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Clicks</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">CostEUR</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">AllConversions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-09-08</th>\n",
+       "      <td>None</td>\n",
+       "      <td>Converter</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30189.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4406.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1929.66</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-09-12</th>\n",
+       "      <td>None</td>\n",
+       "      <td>Converter</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19483.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2455.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>841.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-10-06</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Impressions</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1366.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-10-13</th>\n",
+       "      <td>Click</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>27399.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>890.71</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Group                                  Impressions  \\\n",
+       "SubGroup   Click - 00 Converter - Low Impressions - 01  Click - 00   \n",
+       "Date                                                                 \n",
+       "2015-09-08       None       Converter             None         NaN   \n",
+       "2015-09-12       None       Converter             None         NaN   \n",
+       "2015-10-06       None            None      Impressions         NaN   \n",
+       "2015-10-13      Click            None             None     27399.0   \n",
+       "\n",
+       "                                                Clicks                  \\\n",
+       "SubGroup   Converter - Low Impressions - 01 Click - 00 Converter - Low   \n",
+       "Date                                                                     \n",
+       "2015-09-08         30189.0              NaN        NaN          4406.0   \n",
+       "2015-09-12         19483.0              NaN        NaN          2455.0   \n",
+       "2015-10-06             NaN           1366.0        NaN             NaN   \n",
+       "2015-10-13             NaN              NaN     2009.0             NaN   \n",
+       "\n",
+       "                               CostEUR                                   \\\n",
+       "SubGroup   Impressions - 01 Click - 00 Converter - Low Impressions - 01   \n",
+       "Date                                                                      \n",
+       "2015-09-08              NaN        NaN         1929.66              NaN   \n",
+       "2015-09-12              NaN        NaN          841.59              NaN   \n",
+       "2015-10-06              0.0        NaN             NaN              0.0   \n",
+       "2015-10-13              NaN     890.71             NaN              NaN   \n",
+       "\n",
+       "           AllConversions                                   \n",
+       "SubGroup       Click - 00 Converter - Low Impressions - 01  \n",
+       "Date                                                        \n",
+       "2015-09-08            NaN            72.0              NaN  \n",
+       "2015-09-12            NaN            31.0              NaN  \n",
+       "2015-10-06            NaN             NaN              0.0  \n",
+       "2015-10-13            0.0             NaN              NaN  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeseries[:4].pivot(columns='SubGroup')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2015-09-14\n",
+       "1   2015-11-17\n",
+       "2   2015-09-09\n",
+       "Name: Date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(tmp['Date'][:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -3414,40 +3617,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2015-08-01</th>\n",
+       "      <th>2015-10-13</th>\n",
        "      <td>Click</td>\n",
-       "      <td>Click - 02</td>\n",
-       "      <td>4698</td>\n",
-       "      <td>703</td>\n",
-       "      <td>130.92</td>\n",
+       "      <td>Click - 00</td>\n",
+       "      <td>27399</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>890.71</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-08-01</th>\n",
+       "      <th>2015-09-08</th>\n",
+       "      <td>Converter</td>\n",
+       "      <td>Converter - Low</td>\n",
+       "      <td>30189</td>\n",
+       "      <td>4406</td>\n",
+       "      <td>1929.66</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-10-06</th>\n",
        "      <td>Impressions</td>\n",
        "      <td>Impressions - 01</td>\n",
-       "      <td>1747</td>\n",
+       "      <td>1366</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-08-01</th>\n",
-       "      <td>Converter</td>\n",
-       "      <td>Converter - High</td>\n",
-       "      <td>50684</td>\n",
-       "      <td>15413</td>\n",
-       "      <td>2208.11</td>\n",
-       "      <td>416.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-08-01</th>\n",
-       "      <td>Converter</td>\n",
-       "      <td>Converter - Low</td>\n",
-       "      <td>24594</td>\n",
-       "      <td>3395</td>\n",
-       "      <td>1180.40</td>\n",
-       "      <td>51.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3456,51 +3650,24 @@
       "text/plain": [
        "                  Group          SubGroup  Impressions  Clicks  CostEUR  \\\n",
        "Date                                                                      \n",
-       "2015-08-01        Click        Click - 02         4698     703   130.92   \n",
-       "2015-08-01  Impressions  Impressions - 01         1747       0     0.00   \n",
-       "2015-08-01    Converter  Converter - High        50684   15413  2208.11   \n",
-       "2015-08-01    Converter   Converter - Low        24594    3395  1180.40   \n",
+       "2015-10-13        Click        Click - 00        27399    2009   890.71   \n",
+       "2015-09-08    Converter   Converter - Low        30189    4406  1929.66   \n",
+       "2015-10-06  Impressions  Impressions - 01         1366       0     0.00   \n",
        "\n",
        "            AllConversions  \n",
        "Date                        \n",
-       "2015-08-01             0.0  \n",
-       "2015-08-01             0.0  \n",
-       "2015-08-01           416.0  \n",
-       "2015-08-01            51.0  "
+       "2015-10-13             0.0  \n",
+       "2015-09-08            72.0  \n",
+       "2015-10-06             0.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timeseries.pivot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0   2015-09-14\n",
-       "1   2015-11-17\n",
-       "2   2015-09-09\n",
-       "Name: Date, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.to_datetime(tmp['Date'][:3])"
+    "timeseries[:3]"
    ]
   },
   {
